# sym

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md  SECURITY.md  SUPPORT.md
.github/: ABOUT.md  CODEOWNERS  PAGES.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml
crates/symc/: Cargo.toml  README.md
crates/symc/src/: ast.rs  builtins.rs  bytecode.rs  interp.rs  lexer.rs  lib.rs  load.rs  main.rs  parser.rs  sourcemap.rs  span.rs  typeck.rs  vm.rs
docs/: DEVELOPMENT.md  README.md  README.zh.html  index.html
docs/assets/: site.css
docs/industrial/: CHECKLIST.md  builtins-contracts.md  ecosystem-and-process.md  embedding-and-abi.md  i18n-diagnostics.md  quality-and-ci.md  runtime-and-security.md  spec-and-semantics.md  supply-chain.md  tooling-roadmap.md  vm-and-performance.md
docs/process/: lts-policy.md  release-checklist.md  rfc-template.md
docs/spec/: LANGUAGE.md  README.md  SEMANTICS.md  SOUL.md  SYNTAX.md  VM_SUBSET.md  VM_TREE_PARITY.md
examples/: README.md  call_lib.sym  fib.sym  hello.sym  library_mgmt.sym  list.sym  math_lib.sym  option.sym  syntax_showcase.sym  vm_fib.sym  while_input.sym
examples/ccode/: main.sym
examples/ccode/agent/: api.sym  config.sym  loop.sym  messages.sym  openai.sym  stream_anthropic.sym  stream_openai.sym  (+1 more)
fuzz/: README.md
scripts/: conformance_vm_tree.sh  smoke_bench.sh
stdlib/: prelude.sym
tests/conformance/: README.md
(+7 files in other folders)
